--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
   },
   "dependencies": {
     "@modules/app-menu": "file:./modules/app-menu",
+    "@modules/articles": "file:./modules/articles",
+    "@modules/chat": "file:./modules/chat",
+    "@modules/login": "file:./modules/login",
+    "@modules/maps": "file:./modules/maps",
+    "@modules/onboarding": "file:./modules/onboarding",
+    "@modules/privacy-policy": "file:./modules/privacy-policy",
+    "@modules/push-notifications": "file:./modules/push-notifications",
+    "@modules/splash": "file:./modules/splash",
+    "@modules/terms-and-conditions": "file:./modules/terms-and-conditions",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/slider": "^3.0.3",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@reduxjs/toolkit": "^1.5.0",
@@ -25,6 +33,8 @@
     "react-native-dotenv": "^2.5.3",
     "react-native-elements": "^3.3.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "0.27.1",
+    "react-native-onesignal": "^4.0.3",
     "react-native-reanimated": "^2.0.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
@@ -48,11 +58,7 @@
     "preset": "react-native"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
